<resources>
    <string name="app_name">UTEC GO</string>
    <string name="hint_name">Nombre</string>string>
    <string name="btnSiguiente">Siguiente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_map_location">Map</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Opciones del menu -->
    <string name="opt_configuracion">Configuración</string>
    <string name="opt_cuenta">Cuenta</string>
    <string name="opt_acercaDe">Acerca de ...</string>
    <string name="opt_cerrarSesion">Cerrar Sesion</string>
    <string name="title_activity_navigation">navigation</string>

    <!-- Opciones del grupo del menu -->
    <string name="opt_inicio">Inicio</string>
    <string name="opt_edificios">Edificios</string>
    <string name="opt_laboratorios">Laboratorios</string>
    <string name="opt_auditorios">Auditorios</string>
    <string name="opt_bibliotecas">Bibliotecas</string>

    <!-- Opciones del grupo del menu -->
    <string name="opt_facebook">Facebook</string>
    <string name="opt_twitter">Twitter</string>
    <string name="opt_paginaWeb">Pagina Web</string>
    <string name="opt_portal">Portal</string>

    <!-- Informacion de desarrollo -->
    <string name="infoNombre">
        Desarrollado por:


        Douglas Ricardo Guzmán Barahona
    </string>

    <string name="infoCarnet">
        Carnet:
        17-52052-2015
    </string>

    <string name="infoCarrera">
        Carrera:
        Licenciatura en informática
    </string>

    <string name="girl_ipsum">
        Morbi posuere lorem nec elit dapibus, vitae accumsan mauris pellentesque.
        Vestibulum a lobortis mi. Vestibulum lacinia molestie semper. Pellentesque
        ultrices arcu lacus, interdum mollis nibh convallis ut. Aliquam sagittis
        sem a lacus gravida, eu accumsan purus volutpat. Donec tempus, est id
        tristique consectetur, lacus ligula dignissim turpis, cursus commodo turpis
        libero in purus. Phasellus tempus gravida tempor.
    </string>
    <string name="title_activity_menu_utec_go">MenuUtecGo</string>
    <string name="nav_header_title">UTEC GO</string>
    <string name="emailUsuario">1752052015@mail.utec.edu.sv</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
