<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jorge.utecgo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jorge.utecgo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jorge.utecgo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.jorge.utecgo.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.jorge.utecgo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.jorge.utecgo.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_auditorios"
        android:name="com.jorge.utecgo.Activities.fragments.AuditoriosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_auditorios"
        />

    <fragment
        android:id="@+id/nav_enfermerias"
        android:name="com.jorge.utecgo.Activities.fragments.EnfermeriasFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_enfermerias"
        />

    <fragment
        android:id="@+id/nav_edificios"
        android:name="com.jorge.utecgo.Activities.fragments.EdificiosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_edificios"
        />

    <fragment
        android:id="@+id/nav_laboratorios"
        android:name="com.jorge.utecgo.Activities.fragments.LaboratoriosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_laboratorios"
        />

    <fragment
        android:id="@+id/nav_prueba"
        android:name="com.jorge.utecgo.Prueba"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_prueba"
        />
</navigation>
