<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe">


    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:color="#FFFFFF"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="75dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="75dp"
            app:srcCompat="@drawable/miamorsote" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:text="@string/infoNombre" />

        <TextView
            android:id="@+id/edtInfo2"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/infoCarnet" />

        <TextView
            android:id="@+id/edtInfo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoCarrera" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>